--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
     "mysql2": "^3.14.0",
+    "nest-winston": "^1.10.2",
     "nodemailer": "^6.10.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.22",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
